--- a/flask/theme.conf
+++ b/flask/theme.conf
@@ -6,4 +6,11 @@ pygments_style = flask_theme_support.FlaskyStyle
 [options]
 index_logo = ''
 index_logo_height = 120px
-touch_icon = 
+touch_icon =
+
+font_family =
+header_font_family =
+font_size =
+sidebar_font_size =
+link_color =
+link_hover_color =
