--- a/flask/theme.conf
+++ b/flask/theme.conf
@@ -12,6 +12,8 @@ font_family =
 header_font_family =
 font_size =
 sidebar_font_size =
+font_weight =
+header_font_weight =
 link_color =
 link_hover_color =
 link_text_decorations = True
