make theme pip installable

--- a/flask_sphinx_themes/flask_small/theme.conf
+++ b/flask_sphinx_themes/flask_small/theme.conf
@@ -1,7 +1,8 @@
 [theme]
 inherit = basic
 stylesheet = flasky.css
-pygments_style = flask_theme_support.FlaskyStyle
+nosidebar = true
+pygments_style = flask_sphinx_themes.pygments.FlaskyStyle
 
 [options]
 index_logo =
