--- a/flask_sphinx_themes/flask/theme.conf
+++ b/flask_sphinx_themes/flask/theme.conf
@@ -1,8 +1,7 @@
 [theme]
 inherit = basic
 stylesheet = flasky.css
-nosidebar = true
-pygments_style = flask_theme_support.FlaskyStyle
+pygments_style = flask_sphinx_themes.pygments.FlaskyStyle
 
 [options]
 index_logo =
