Replace forkme ribbon image by plain-CSS ribbon

--- a/flask_sphinx_themes/flask/theme.conf
+++ b/flask_sphinx_themes/flask/theme.conf
@@ -8,4 +8,7 @@ index_logo =
 index_logo_height = 120px
 touch_icon =
 github_fork =
-github_ribbon_color = darkblue_121621
+github_ribbon_color = #0c1015
+github_ribbon_hover_color = #000
+github_text_color = #fff
+github_text_hover_color = #fff
